--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,9 +29,10 @@ nav button {
 }
 header .search-bar input {
   width: 80%;
-  height: 80%;
-  background-color: rgb(245, 245, 245);
-  border: 1px solid;
+  height: 90%;
+  text-align: center;
+  background-color: rgb(230, 230, 230);
+  border: 1px solid rgb(245, 245, 245);
   border-radius: 10px;
 }
 header .insta-pic,
@@ -40,6 +41,11 @@ header .search-bar {
 }
 header .fa {
   font-size: 30px;
+}
+
+header .container .search-bar form {
+  width: 100%;
+  height: 100%;
 }
 
 html {
