--- a/static/css/view-post-style.css
+++ b/static/css/view-post-style.css
@@ -69,6 +69,9 @@ section.view-post .comments .uinfo {
   column-gap: 20px;
   margin-left: 10px;
   margin-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid rgb(220, 220, 220);
+  box-sizing: border-box;
 }
 
 section.view-post .comments .profile-pic .fa {
@@ -127,6 +130,85 @@ section.view-post .like-p {
   text-align: left;
   margin-left: 10px;
   grid-row-start: 3;
+  width: 90%;
+  border-top: 2px solid rgb(220, 220, 220);
+}
+
+section.view-post .comments-section {
+  overflow-y: auto;
+  text-align: left;
+  width: 90%;
+}
+
+section.view-post .comments-section .uinfo {
+  display: grid;
+  grid-template-columns: 30px auto;
+  grid-template-rows: auto auto;
+  font-size: 11px;
+  border: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+section.view-post .comments-section .user-name {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+section.view-post .comments-section .comment-description {
+  font-weight: 400;
+  text-align: justify;
+}
+
+section.view-post .write-comment {
+  margin-bottom: 8px;
+}
+section.view-post .write-comment form {
+  display: flex;
+  column-gap: 10px;
+  height: 30px;
+  background-color: rgb(240, 240, 240);
+  /* width: 90%; */
+  border-radius: 10px;
+}
+section.view-post .write-comment textarea {
+  width: 80%;
+  border: 0px;
+  background-color: rgb(240, 240, 240);
+  border-radius: 10px;
+}
+section.view-post .write-comment button {
+  display: block;
+  /* height: 20px; */
+  border: 0px;
+  cursor: pointer;
+  color: rgb(48, 101, 166);
+  font-size: 16px;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+section.view-post .comments-section .profile-pic {
+  grid-row: 1 / span 2;
+  margin: unset;
+}
+
+section.view-post .like-comment-share .share {
+  position: relative;
+}
+
+section.view-post .share .share-message {
+  position: absolute;
+  top: 0px;
+  right: 30px;
+  /* left: 20px; */
+  font-size: 10px;
+  z-index: 3;
+  background-color: #262626;
+  color: white;
+  width: max-content;
+  padding: 0.2em 0.5em;
+  border-radius: 5px;
+  display: none;
 }
 
 section.related-posts .related-container {
@@ -184,4 +266,12 @@ section.related-posts .content {
 
 .fa {
   font: normal normal normal 22px/1 FontAwesome;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
 }
