--- a/templates/instagramapp/base.html
+++ b/templates/instagramapp/base.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{% static 'css/view-post-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/view-following-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/view-followers-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/search-page-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/update-profile-style.css' %}" />
+    <script src="{% static 'js/share.js' %}"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
@@ -27,10 +30,15 @@
 
         <div class="container">
             <div class="insta-pic">
-                <img src="{% static 'images/instagram.png' %}" alt="instagram">
+                <a href="/home">
+                    <img src="{% static 'images/instagram.png' %}" alt="instagram">
+                </a>
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="Search">
+                <form action="/search/" method="POST">
+                    {% csrf_token %}
+                    <input type="text" placeholder="Search" name="search" value="">
+                </form>
             </div>
             <div class="nav-bar">
                 <nav>
