--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,12 @@ header .fa {
   font-size: 30px;
 }
 
+header .user-profile .img-circle {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+
 header .container .search-bar form {
   width: 100%;
   height: 100%;
@@ -71,5 +77,10 @@ body {
 @media screen and (max-width: 450px) {
   header .fa {
     font-size: 24px;
+  }
+  header .user-profile .img-circle {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
   }
 }
