--- a/static/css/explore-friends-style.css
+++ b/static/css/explore-friends-style.css
@@ -39,18 +39,18 @@ section.all .container .others {
   grid-template-columns: 1fr 1fr;
 }
 
-section.home-post .container {
+/* section.home-post .container {
   grid-template-columns: 1fr;
   display: grid;
   row-gap: 30px;
   width: 500px;
   margin: auto;
-}
+} */
 
 /* section.home-post .container {
 } */
 
-section.home-post .item-container {
+/* section.home-post .item-container {
   display: grid;
   row-gap: 10px;
 }
@@ -58,9 +58,9 @@ section.home-post .item-container {
 section.home-post img {
   width: 100%;
   height: auto;
-}
+} */
 
-section.home-post .user-name {
+/* section.home-post .user-name {
   display: grid;
   grid-template-columns: 40px auto auto;
   column-gap: 10px;
@@ -70,9 +70,9 @@ section.home-post .user-name .profile-pic .fa {
 }
 section.home-post .user-name .profile-pic {
   margin: auto;
-}
+} */
 
-section.home-post .user-name a {
+/* section.home-post .user-name a {
   background-color: white;
   text-decoration: none;
   color: black;
@@ -95,9 +95,9 @@ section.home-post .user-name .unfollow button {
   cursor: pointer;
   color: white;
   box-sizing: border-box;
-}
+} */
 
-section.home-post .img button {
+/* section.home-post .img button {
   width: 100%;
   border: 0px;
 }
@@ -108,7 +108,7 @@ section.home-post button[name="post_pk"] {
 section.home-post .likes-count {
   font-weight: 600;
   color: #262626;
-}
+} */
 
 section.test .main-container {
   display: grid;
