--- a/templates/instagramapp/view-following.html
+++ b/templates/instagramapp/view-following.html
@@ -11,6 +11,14 @@
         {% endif %}
         {% for follow in following %}
         <div class="view-container">
+            <div class="profile-pic">
+                <button>
+                    <a href="{% url 'profile' follow.user_name %}">
+                        <img src="{{ follow.profile_pic.url }}">
+                        <!-- <i class="fa fa-user-circle"></i> -->
+                    </a>
+                </button>
+            </div>
             <div class="uname">
                 {{ follow.user_name }}
             </div>
