--- a/templates/instagramapp/base.html
+++ b/templates/instagramapp/base.html
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/view-followers-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/search-page-style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/update-profile-style.css' %}" />
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+    <link rel="stylesheet" href="{% static 'css/post-form-style.css' %}" />
     <script src="{% static 'js/share.js' %}"></script>
     <script src="{% static 'js/subComments.js' %}"></script>
     <title>Document</title>
