--- a/templates/instagramapp/post-form.html
+++ b/templates/instagramapp/post-form.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
+{% extends "instagramapp/base.html" %}
 {% load staticfiles %}
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post</title>
-    <link rel="stylesheet" href="{% static 'css/post-form-style.css' %}" />
-</head>
-
-<body>
+{% block content %}
+<section class="post-form">
     <div class="form">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -19,6 +10,5 @@
             <input type="submit" value="Post">
         </form>
     </div>
-</body>
-
-</html>
+</section>
+{% endblock %}
