--- a/static/css/post-form-style.css
+++ b/static/css/post-form-style.css
@@ -1,14 +1,73 @@
-input[type="submit"] {
-  background-color: slateblue;
-  color: black;
-  font-size: 16px;
-  padding: 0.5em 8em;
-}
-form {
-  margin: auto;
+section.post-form .form {
   width: 400px;
+  margin: auto;
+  background-color: white;
+  padding: 35px 0px;
+  text-align: center;
+  border-radius: 30px;
+}
+section.post-form .form form {
+  display: grid;
+  /* row-gap: 5px; */
+  text-align: center;
 }
 
-.form * {
+section.post-form input[type="submit"] {
+  background-color: slateblue;
+  color: black;
+  width: 30%;
+  font-size: 16px;
+  padding: 0.3em 2em;
+  border-radius: 0.5em;
+  border: 0px;
+  margin: auto;
+}
+/* section.post-form form {
+  margin: auto;
+  width: 400px;
+} */
+
+section.post-form .form * {
   vertical-align: middle;
+}
+
+section.post-form label {
+  display: block;
+  font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  font-style: italic;
+  text-align: left;
+  margin-left: 20%;
+}
+
+section.post-form input {
+  width: 60%;
+  background-color: rgb(230, 230, 230);
+  border: 0px;
+  border-radius: 5px;
+}
+
+section.post-form textarea {
+  width: 60%;
+  height: 50px;
+  background-color: rgb(230, 230, 230);
+  border-radius: 15px;
+  text-align: center;
+}
+section.post-form input#id_location {
+  height: 25px;
+  border-radius: 10px;
+}
+
+section.post-form input[type="file"] {
+  height: 25px;
+  border-radius: 10px;
+}
+section.post-form input[type="file"]::file-selector-button {
+  border-radius: 10px;
+  border: 1px solid black;
+  margin-top: 5px;
+  margin-left: 5px;
 }
