--- a/static/css/view-followers-style.css
+++ b/static/css/view-followers-style.css
@@ -13,7 +13,7 @@ section.view-followers .main-container .view-container {
   grid-template-columns: auto 2fr auto;
   width: 300px;
   margin: auto;
-  column-gap: 30px;
+  /* column-gap: 30px; */
   font-size: larger;
   text-align: center;
   border-radius: 1em;
@@ -37,8 +37,15 @@ section.view-followers .view-container .uname {
   align-content: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 18px;
-  margin: auto;
+  font-size: 14px;
+  /* margin: auto; */
+  margin-left: 5px;
+  font-weight: 600;
+  text-align: left;
+}
+section.view-followers .view-container .uname .name {
+  font-size: 13px;
+  font-weight: 400;
 }
 
 section.view-followers .main-container .view-container .profile-pic img {
