--- a/static/css/explore-friends-style.css
+++ b/static/css/explore-friends-style.css
@@ -129,3 +129,56 @@ section.test .main-container .item button {
   height: 100%;
   border: 0px;
 }
+
+section.test1 .main-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+  margin: 0px 10%;
+  column-gap: 10px;
+  row-gap: 20px;
+}
+
+section.test1 .main-container .item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+section.test1 .main-container .item button {
+  width: 100%;
+  height: 100%;
+  border: 0px;
+}
+
+/* section.test1 .main-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1.5fr 1.5fr;
+} */
+
+section.test1 .main-container .item1 {
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
+}
+section.test1 .main-container .item2 {
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 1;
+}
+section.test1 .main-container .item3 {
+  grid-row: 1 / span 2;
+  grid-column: 2 / span 2;
+}
+
+section.test1 .main-container .item7 {
+  grid-row: 4 / span 2;
+  grid-column: 1 / span 2;
+}
+section.test1 .main-container .item8 {
+  grid-row: 4 / span 1;
+  grid-column: 3 / span 1;
+}
+section.test1 .main-container .item9 {
+  grid-row: 5 / span 1;
+  grid-column: 3 / span 1;
+}
